test/analysis/reject/duplicate-node.ptk
# expected: E1301
node foo = `bool`;
node foo = `bool`;